--- a/pset7/survey/templates/form.html
+++ b/pset7/survey/templates/form.html
@@ -1,23 +1,89 @@
 {% extends "layout.html" %}
 
 {% block main %}
+    <div class="container">
+        <!-- http://getbootstrap.com/docs/4.1/content/typography/ -->
+        <h1 class="mb-3">Explorercraft Biome Survey</h1>
+        <h2 class="mb-3">Forested Mountain Biome</h2>
+        <!-- http://getbootstrap.com/docs/4.1/components/forms/ -->
+        <form action="/form" method="post" class="needs-validation" novalidate>
 
-    <!-- http://getbootstrap.com/docs/4.1/content/typography/ -->
-    <h1 class="mb-3">Form</h1>
+            <div class="mb-3">
+                <h6>Do you like this biome?</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="likeBiome" id="likeBiome1" value="option1" checked>
+                    <label class="form-check-label" for="likeBiome1">
+                        Yes
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="likeBiome" id="likeBiome2" value="option2">
+                    <label class="form-check-label" for="likeBiome2">
+                        No
+                    </label>
+                </div>
+                <div class="invalid-feedback">
+                    You must select an option
+                </div>
+            </div>
+            <div class="mb-3">
+                <h6>Do you like that Ruby Ore is exclusive to this biome and that it prompts exploration?</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="likeRuby" id="likeRuby1" value="option1" checked>
+                    <label class="form-check-label" for="likeRuby1">
+                        Yes
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="likeRuby" id="likeRuby2" value="option2">
+                    <label class="form-check-label" for="likeRuby2">
+                        No
+                    </label>
+                </div>
+            </div>
 
-    <!-- http://getbootstrap.com/docs/4.1/components/forms/ -->
-    <form action="/form" method="post">
+            <h6>Which of these structures would you like to see added to the biome?</h6>
+            <div class="form-group">
+                <select class="custom-select" required>
+                    <option disabled selected value="">Select your favourite</option>
+                    <option value="Cabin">Cabin</option>
+                    <option value="Tent">Tent/Campsite</option>
+                    <option value="Stone">Stone Formation</option>
+                </select>
+                <div class="invalid-feedback">Please select an option</div>
+            </div>
+            <h6>What would you like to add to this biome? think of cool new reasons for exploring this biome</h6>
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="new exploration suggestions can go here" required>
+                <div class="invalid-feedback">
+                    Please add a suggestion, if not put N/A.
+                </div>
+            </div>
 
-        <!-- TODO -->
 
-        <!-- http://getbootstrap.com/docs/4.1/components/buttons/ -->
-        <button class="btn btn-primary" type="submit">Submit</button>
+            <!-- http://getbootstrap.com/docs/4.1/components/buttons/ -->
+            <button class="btn btn-primary" type="submit">Submit</button>
 
-    </form>
-
+        </form>
+    </div>
     <script>
-
-        /* TODO */
+        (function() {
+          'use strict';
+          window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function(form) {
+              form.addEventListener('submit', function(event) {
+                if (form.checkValidity() === false) {
+                  event.preventDefault();
+                  event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+              }, false);
+            });
+          }, false);
+        })();
 
     </script>
 
